@@ -1,4 +1,5 @@
 [master branch]
+    - Fixed bug in layout processing - quoted formatter argments are now handled correctly.
     - Fixed bug 3545394: null and curly brackets in custom export filter.
     - Added support for pushing citations to TeXstudio (requires TeXstudio >=2.4)
     - Text-based citations can now be imported using FreeCite by Brown University
